# slag

./: Cargo.toml  README.md  config-example.yaml
config/: log4rs.yml
src/: cfg.rs  config.rs  errors.rs  irc_client.rs  main.rs  message.rs  slack_client.rs
src/irc/: mod.rs
