[package]
name = "slagw"
version = "0.1.0"
authors = ["Emīls Piņķis <pinkisemils@gmail.com>"]

[dependencies]
config = "0.7"
error-chain = "0.10"
futures = "0.1"
irc = "0.13"
log = "0.4"
native-tls = "0.1"
serde = "^1.0.8"
serde_derive = "^1.0.8"
slack = "0.18.0"
slack-hook = { git = "ssh://git@github.com/pinkisemils/rust-slack.git", branch = "async_sender"}
slack_api = { version = "0.17.0", features = ["reqwest"]  }
tokio-core = "0.1"
tokio-io = "0.1"
tokio-pool = "0.1.0"
tokio-timer = "0.1"
tokio-tls = "0.1"
simplelog = "^0.5.0"
clap = "^2"

[dependencies.log4rs]
version = "0.4.8" 
features = ["yaml"]

